# nevo-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  NEVO_SLM_ROADMAP.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  load_test.py  pyproject.toml  requirements.txt  run_migration.py
docs/: API_DOCUMENTATION.md
src/: __init__.py
src/ai/: __init__.py
src/ai/agents/: __init__.py  adaptation_agent.py  profile_agent.py
src/ai/models/: __init__.py
src/ai/pipelines/: __init__.py  training_pipeline.py
src/ai/prompts/: __init__.py  adaptation_prompts.py  chat_prompts.py  profile_prompts.py
src/ai/training/: __init__.py
src/app/: __init__.py  main.py
src/application/: __init__.py
src/application/common/: __init__.py  base_use_case.py  unit_of_work.py
src/application/features/: __init__.py
src/application/features/assessments/: __init__.py
src/application/features/auth/: __init__.py
src/application/features/chat/: __init__.py
src/application/features/lessons/: __init__.py
src/core/: __init__.py
src/core/config/: __init__.py  constants.py  settings.py
src/core/exceptions/: __init__.py  base.py
src/core/security/: __init__.py  class_code.py  jwt.py  nevo_id.py  password.py
src/domain/: __init__.py
src/domain/entities/: __init__.py  adapted_lesson.py  assessment.py  base.py  chat_message.py  connection.py  lesson.py  lesson_assignment.py  neuro_profile.py  progress.py  school.py  teacher_feedback.py  training_data.py  user.py  waitlist.py
src/domain/events/: __init__.py  assessment_events.py  base.py  lesson_events.py  user_events.py
src/domain/interfaces/: __init__.py  repositories.py  services.py
src/domain/value_objects/: __init__.py  email.py  pagination.py
src/infrastructure/: __init__.py
src/infrastructure/cache/: __init__.py  noop_cache.py  redis_service.py
src/infrastructure/database/: __init__.py  session.py  unit_of_work.py
src/presentation/: __init__.py
src/presentation/schemas/: __init__.py  assessment.py  auth.py  chat.py  connection.py  email.py  lesson.py  profile.py  progress.py  school.py  student.py  teacher.py  waitlist.py
supabase/: config.toml  seed.sql
supabase/migrations/: 20260209000000_initial_schema.sql  20260209000001_drop_alembic_version.sql  20260209000002_create_enum_types.sql  20260210000000_add_nevo_id_and_pin.sql  20260215000000_add_teacher_feedbacks.sql  20260215000001_add_chat_messages.sql  20260220000000_add_connections.sql  20260225000000_add_profile_settings.sql  20260227000000_add_lesson_assignments.sql  20260228000000_create_waitlist.sql  20260308000000_create_keep_alive.sql
tests/: __init__.py  conftest.py
(+138 files in other folders)
